buildkit/gateway-proxy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: buildkitd-gateway
spec:
  ports:
  - port: 8547
    protocol: TCP
  selector:
    app: buildkitd-gateway-proxy
